--- a/public/scss/navigation.scss
+++ b/public/scss/navigation.scss
@@ -1,4 +1,5 @@
-/* The side navigation menu */
+@import "variable";
+
 .navigation {
     height: 100%; /* 100% Full-height */
     width: 250px; /* 0 width - change this with JavaScript */
@@ -9,21 +10,17 @@
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
-  }
-  
-  /* The navigation menu links */
-.navigation a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
-  }
-  
-  /* When you mouse over the navigation links, change their color */
-.navigation a:hover {
-    color: #f1f1f1;
+    background-color: #aee495;
+
+    button {
+      color: $orange;
+      display: block;
+      transition: 0.3s;
+
+      &:hover {
+        color: $orangeD;
+      }
+    }
   }
 
   /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
@@ -36,5 +33,5 @@
   /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
     .navigation {padding-top: 15px;}
-    .navigation a {font-size: 18px;}
+    .navigation button {font-size: 18px;}
   }
