--- a/public/scss/variable.scss
+++ b/public/scss/variable.scss
@@ -3,8 +3,9 @@ $blue: #2292C2;
 $blueD: #234694;
 $orange: #EFA26A;
 $orangeD: #EE826C;
-$font: "comic relief";
+$green: #B6EBC4;
 
 button {
-    border-radius: 16px;
+    border-radius: 40px;
+    border-color: $orange;
 }
